fixed company text positioning in safari by setting the width and height of company_div in javascript. Everything is working now except the country names are cut off in firefox and safari

--- a/web/cu_treemap.css
+++ b/web/cu_treemap.css
@@ -7,12 +7,18 @@ body {
 	stroke: #ffffff;
 }
 
-.company_div, .country_div {
-	height: 100%;
-	width: 100%;
+.company_div {  display: table;}
+
+.country_div {
+	position: fixed;
+	z-index: 0;
 }
 
-.company_div {  display: table;}
+.country_text {
+	width: 100%;
+	height: 100%;
+}
+
 .country_text {
 	font-size:40px;
 	color:black;
@@ -26,11 +32,6 @@ body {
 	color: #ffffff;
 	text-align: center;
 	vertical-align: middle;
-}
-
-.country_div {
-	position: fixed;
-	z-index: 0;
 }
 
 .country_cell .country_rect {
